--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
         }
     </style>
 
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="../css/style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta name="apple-mobile-web-app-capable" content="yes" />
 
-    <script type="text/javascript" src="js/pinch-zoom.umd.js"></script>
-    <script type="text/javascript" src="js/vconsole.min.js"></script>
+    <script type="text/javascript" src="../js/pinch-zoom.umd.js"></script>
+    <script type="text/javascript" src="../js/vconsole.min.js"></script>
 </head>
 <body>
 
@@ -26,7 +26,7 @@
                 <h1>Pinchzoom.js</h1>
                 <p>Multi-touch zoom in Javascript</p>
             </div>
-            <img src="asset/frog.jpg"/>
+            <img src="../asset/frog.jpg"/>
             <a class="image" href="http://www.flickr.com/photos/59446027@N00/5258583198" target="_blank">
               by Peter Nijenhuis on Flickr; Some rights reserved
             </a>
