--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <h1>Pinchzoom.js</h1>
                 <p>Multi-touch zoom in Javascript</p>
             </div>
-            <img src="../asset/frog.jpg"/>
+            <img src="https://miniapp.edisonx.cn/h5/taihe2/asset/frog.jpg"/>
             <a class="image" href="http://www.flickr.com/photos/59446027@N00/5258583198" target="_blank">
               by Peter Nijenhuis on Flickr; Some rights reserved
             </a>
