--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
         }
     </style>
 
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="https://miniapp.edisonx.cn/h5/taihe2/css/style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta name="apple-mobile-web-app-capable" content="yes" />
 
-    <script type="text/javascript" src="js/pinch-zoom.umd.js"></script>
-    <script type="text/javascript" src="js/vconsole.min.js"></script>
+    <script type="text/javascript" src="https://miniapp.edisonx.cn/h5/taihe2/js/pinch-zoom.umd.js"></script>
+    <script type="text/javascript" src="https://miniapp.edisonx.cn/h5/taihe2/js/vconsole.min.js"></script>
 </head>
 <body>
 
