--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <link rel="stylesheet" href="https://miniapp.edisonx.cn/h5/taihe2/css/style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta name="apple-mobile-web-app-capable" content="yes" />
-
+    <script type="text/javascript" src="js/jquery.js"></script>
+    <script type="text/javascript" src="js/underscore-min.js"></script>
     <script type="text/javascript" src="https://miniapp.edisonx.cn/h5/taihe2/js/pinch-zoom.umd.js"></script>
     <script type="text/javascript" src="https://miniapp.edisonx.cn/h5/taihe2/js/vconsole.min.js"></script>
 </head>
