somthing done for taihe2

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <script type="text/javascript" src="https://miniapp.edisonx.cn/h5/taihe2/js/jquery.js"></script>
     <script type="text/javascript" src="https://miniapp.edisonx.cn/h5/taihe2/js/underscore-min.js"></script>
-    <script type="text/javascript" src="https://miniapp.edisonx.cn/h5/taihe2/js/pinch-zoom.umd.js"></script>
+    <script type="text/javascript" src="https://miniapp.edisonx.cn/h5/taihe2/js/pinch-zoom.js"></script>
     <script type="text/javascript" src="https://miniapp.edisonx.cn/h5/taihe2/js/vconsole.min.js"></script>
 </head>
 <body>
