--- a/index.html
+++ b/index.html
@@ -1,43 +1,38 @@
-<!DOCTYPE HTML>
-<html>
+<!DOCTYPE html>
+<html lang="en">
+
 <head>
-    <title>Pinchzoom.js Demo</title>
-
-    <style type="text/css">
-        div.pinch-zoom,
-        div.pinch-zoom img {
-            width: 100%;
-            -webkit-user-drag: none;
-        }
+    <meta charset="UTF-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta http-equiv="expires" content="0">
+    <meta http-equiv="pragma" content="no-cache">
+    <meta http-equiv="cache-control" content="no-cache">
+    <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport">
+    <title>欢乐找茬</title>
+    <link rel="stylesheet" href="css/index.css">
+    <style>
+        
     </style>
-
-    <link rel="stylesheet" href="https://miniapp.edisonx.cn/h5/taihe2/css/style.css" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-    <script type="text/javascript" src="https://miniapp.edisonx.cn/h5/taihe2/js/jquery.js"></script>
-    <script type="text/javascript" src="https://miniapp.edisonx.cn/h5/taihe2/js/underscore-min.js"></script>
-    <script type="text/javascript" src="https://miniapp.edisonx.cn/h5/taihe2/js/pinch-zoom.js"></script>
-    <script type="text/javascript" src="https://miniapp.edisonx.cn/h5/taihe2/js/vconsole.min.js"></script>
 </head>
+
 <body>
 
-    <div class="page">
-        <div class="pinch-zoom">
-            <div class="description">
-                <h1>Pinchzoom.js</h1>
-                <p>Multi-touch zoom in Javascript</p>
-            </div>
-            <img src="https://miniapp.edisonx.cn/h5/taihe2/asset/frog.jpg"/>
-            <a class="image" href="http://www.flickr.com/photos/59446027@N00/5258583198" target="_blank">
-              by Peter Nijenhuis on Flickr; Some rights reserved
-            </a>
+    <div class="container" id="view_play">
+        <img src="asset/bg.jpg" class="img_bg"/>
+        <div id="zoom_area">
+            <img id="pic" src="asset/pic.jpg">
         </div>
     </div>
-
-    <script type="text/javascript">
-      var el = document.querySelector('div.pinch-zoom');
-      new PinchZoom.default(el, {});
-    </script>
-
+   
 </body>
+<script src="js/jquery.js"></script>
+<script src="http://res.wx.qq.com/open/js/jweixin-1.2.0.js"></script>
+<script type="text/javascript" src="js/zoom.js"> </script>
+<script src='http://h5.edisonx.cn/718_audio/flip/js/vconsole.min.js'></script>
+<script>
+ var elem = document.getElementById('zoom_area');
+    var zm = new Zoom(elem, {
+        rotate: false
+    });
+</script>
 </html>
