somthing done for taihe2

--- a/index.html
+++ b/index.html
@@ -30,9 +30,11 @@
 <script type="text/javascript" src="js/zoom.js"> </script>
 <script src='http://h5.edisonx.cn/718_audio/flip/js/vconsole.min.js'></script>
 <script>
- var elem = document.getElementById('zoom_area');
-    var zm = new Zoom(elem, {
-        rotate: false
-    });
+//  var elem = document.getElementById('zoom_area');
+//     var zm = new Zoom(elem, {
+//         rotate: false
+//     });
+
+
 </script>
 </html>
