somthing done for taihe2

--- a/index.html
+++ b/index.html
@@ -27,14 +27,12 @@
 </body>
 <script src="js/jquery.js"></script>
 <script src="http://res.wx.qq.com/open/js/jweixin-1.2.0.js"></script>
-<script type="text/javascript" src="js/zoom.js"> </script>
+<!-- <script type="text/javascript" src="js/zoom.js"> </script> -->
 <script src='http://h5.edisonx.cn/718_audio/flip/js/vconsole.min.js'></script>
 <script>
 //  var elem = document.getElementById('zoom_area');
 //     var zm = new Zoom(elem, {
 //         rotate: false
 //     });
-
-
 </script>
 </html>
