--- a/index.html
+++ b/index.html
@@ -19,8 +19,54 @@
 
     <div class="container" id="view_play">
         <img src="asset/bg.jpg" class="img_bg"/>
-        <div id="zoom_area">
+        <div id="pic_area">
             <img id="pic" src="asset/pic.jpg">
+        </div>
+        <div class="sec">
+            <img id="btn_tujian" src="asset/btn_tj_0.png">
+        </div>
+        <h3 id="desc">测试下你的眼力! 查看上图与大屏幕不同之处, 赢取丰厚奖品!</h3>
+    </div>
+
+    <div class="container" id="view_tujian">
+        <div id="dialog">
+            <div id="list">
+                <div id='raw_0' class='tj_item'>
+                    <div class="icon_wrap icon_first">
+                        <img id='icon_0_0' src='asset/tj_0_0_0.png' class='tj_icon'>
+                    </div>
+                    <div class="icon_wrap">
+                        <img id='icon_0_1' src='asset/tj_0_1_0.png' class='tj_icon'>
+                    </div>
+                    <div class="icon_wrap">
+                        <img id='icon_0_2' src='asset/tj_0_2_0.png' class='tj_icon'>
+                    </div>
+                    <div class="icon_wrap">
+                        <img id='icon_0_3' src='asset/tj_0_2_0.png' class='tj_icon'>
+                    </div>
+                    <div class="btn_wrap">
+                        <img id='btn_charge_0' src='asset/charge_0.png' class='brn_charge'>
+                    </div>
+                </div>
+
+                <div id='raw_1' class='tj_item'>
+                    <div class="icon_wrap icon_first">
+                        <img id='icon_1_0' src='asset/tj_1_0_0.png' class='tj_icon'>
+                    </div>
+                    <div class="icon_wrap">
+                        <img id='icon_1_1' src='asset/tj_1_1_0.png' class='tj_icon'>
+                    </div>
+                    <div class="icon_wrap">
+                        <img id='icon_1_2' src='asset/tj_1_2_0.png' class='tj_icon'>
+                    </div>
+                    <div class="btn_wrap">
+                        <img id='btn_charge_1' src='asset/charge_0.png' class='brn_charge'>
+                    </div>
+                </div>
+
+                <h4 id="readme">温馨提示:<br>
+                        寻找与大屏幕海报不同点。每找到一处可获得一枚勋章，集齐后可兑换奖品。<br>每次游戏结果可累加哦！多玩多得, 大家一起来比眼力吧！</h5>
+            </div>
         </div>
     </div>
    
@@ -30,7 +76,7 @@
 <!-- <script type="text/javascript" src="js/zoom.js"> </script> -->
 <script src='http://h5.edisonx.cn/718_audio/flip/js/vconsole.min.js'></script>
 <script>
-//  var elem = document.getElementById('zoom_area');
+//  var elem = document.getElementById('pic_area');
 //     var zm = new Zoom(elem, {
 //         rotate: false
 //     });
