somthing done for taihe2

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@ function requestChaPicInfo (chaPicId) {
             y:touch.pageY
         };
 
-        if(checkHit(pickPos)) {
+        if(checkHit(pickPos) || false) {
 
         } else {
             var oImgBox = document.createElement("img");
