--- a/index.html
+++ b/index.html
@@ -80,6 +80,9 @@
 <script>
 var JudgeRadiusSquare = 100;
 var MainUrl = 'https://miniapp.edisonx.cn/h5/taihe2/php/cha_info.php';
+var IndWidth = 20;
+
+
 
 var ChaPosList = []
 
@@ -148,7 +151,7 @@ function requestChaPicInfo (chaPicId) {
         console.log('pick ' + pickPos.x + ',' + pickPos.y);
 
         var oImgBox = document.createElement("img");
-        oImgBox.setAttribute("style", "width:10vw;height:auto;position:fixed;left:" + pickPos.x + "px;top:" + pickPos.y + "px;");
+        oImgBox.setAttribute("style", "width:" + IndWidth + "px;height:auto;position:fixed;left:" + (pickPos.x - IndWidth*0.5) + "px;top:" + (pickPos.y - IndWidth*0.5) + "px;");
         var imgPic = document.getElementById('pic');
         insertAfter(oImgBox, imgPic);
 
