somthing done for taihe2

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 <script>
 var JudgeRadiusSquare = 100;
 var MainUrl = 'https://miniapp.edisonx.cn/h5/taihe2/php/cha_info.php';
-var IndWidth = 20;
+var IndWidth = 40;
 
 
 
@@ -168,7 +168,7 @@ function requestChaPicInfo (chaPicId) {
             }, 1000);
         }
 
-        return false;
+        return true;
     }
 
     function checkHit (pos) {
