--- a/index.html
+++ b/index.html
@@ -97,8 +97,7 @@ function requestChaPicInfo (chaPicId) {
             jsonType: "json",
             timeout: 10000,
             data: {
-                action:'cha_info', 
-                cid: chaPicId
+                action:'query', 
             },
             success: function (data) {
                 console.log('success ' + data);
