somthing done for taihe2

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ function requestChaPicInfo (chaPicId) {
     }
     
     function onPickingUp(event){
-        console.log('onTouchStart')
+        console.log('onPickingUp')
     　　 var touch = event.targetTouches[0]; 
         　　var pickPos = {
             x:touch.pageX,
