--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ function requestChaPicInfo (chaPicId) {
                             })
                         });
                         var picture = document.getElementById('pic');
-                        picture.addEventListener('touchstart', onPickingUp); onmousedown
+                        picture.addEventListener('touchstart', onPickingUp);
                         picture.addEventListener('onmousedown', onPickingUp);
                         chaInfo ['width'] = value['w'];
                         chaInfo ['height'] = value['h'];
