somthing done for taihe2

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 
     <div class="container" id="view_play">
         <img src="asset/bg.jpg" class="img_bg"/>
-        <!-- <div id="pic_area"> -->
-            <img id="pic" alt="玩命加载中...">
-        <!-- </div> -->
+        <div id="pic_area">
+            <img id="pic" src="https://miniapp.edisonx.cn/data/files/cha/pics/11.jpg">
+        </div>
         <div class="sec">
             <img id="btn_tujian" src="asset/btn_tj_0.png">
         </div>
