--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ function requestChaPicInfo (chaPicId) {
                         });
                         var picture = document.getElementById('pic');
                         picture.addEventListener('touchstart', onPickingUp);
-                        picture.onmousedown =  onPickingUp;
+                        // picture.onmousedown =  onPickingUp;
         
                         ChaInfoList[id] = chaInfo;
                         CurChaId = id;
@@ -156,7 +156,7 @@ function requestChaPicInfo (chaPicId) {
     　　 var pickPos;
 
         if (event.hasOwnProperty('targetTouches')) {
-            console.log('targetTouches');
+            // console.log('targetTouches');
             var touch = event.targetTouches[0]; 
             pickPos = {
                 x:touch.pageX,
