somthing done for taihe2

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@ function requestChaPicInfo (chaPicId) {
                 x:touch.pageX,
                 y:touch.pageY
                 };
-        } else if (vent.hasOwnProperty('x')){
+        } else if (event.hasOwnProperty('x')){
             pickPos = {
                 x:event.x,
                 y:event.y
