somthing done for taihe2

--- a/index.html
+++ b/index.html
@@ -155,6 +155,8 @@ function requestChaPicInfo (chaPicId) {
     　　 
     　　 var pickPos;
 
+        console.log(JSON.stringify(event));
+
         if (event.hasOwnProperty('targetTouches')) {
             // console.log('targetTouches');
             var touch = event.targetTouches[0]; 
