somthing done for taihe2

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ function requestChaPicInfo (chaPicId) {
                 y:event.y
                 };
         } else {
-            return true;
+            return false;
         }
        
         console.log('pick ' + pickPos.x + ',' + pickPos.y);
