somthing done for taihe2

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ function requestChaPicInfo (chaPicId) {
     　　 
     　　 var pickPos;
 
-        console.log(JSON.stringify(event.targetTouches));
+        JSON.stringify(event.targetTouches);
 
         if (event.hasOwnProperty('targetTouches')) {
             console.log('targetTouches');
