somthing done for taihe2

--- a/index.html
+++ b/index.html
@@ -157,18 +157,20 @@ function requestChaPicInfo (chaPicId) {
 
         outputObj(event);
 
-        if (event.hasOwnProperty('targetTouches')) {
+        if ('targetTouches' in event) {
             console.log('targetTouches');
             var touch = event.targetTouches[0]; 
             pickPos = {
                 x:touch.pageX,
                 y:touch.pageY
             };
-        } else {
+        } else if('x' in event) {
             pickPos = {
                 x:event.x,
                 y:event.y
             };
+        } else {
+            return;
         }
        
         console.log('pick ' + pickPos.x + ',' + pickPos.y);
